--- a/src/admin.html
+++ b/src/admin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real Properties-Admin</title>
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
     <link href="./index.css" rel="stylesheet" />
   </head>
@@ -14,7 +14,7 @@
       <!-- Sidebar -->
       <div class="bg-green-900 w-64">
         <div class="bg-green-700">
-          <div class="text-gray-200 uppercase font-bold p-5 text-xl">Real Properties</div>
+          <a href="/" class="text-gray-200 inline-block uppercase font-bold p-5 text-xl">Real Properties</a>
         </div>
         <div>
           <div class="p-5 text-gray-200 uppercase text-xs font-bold">Pages</div>
