--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,12 @@
 
             <!-- Menu -->
             <div class="hidden md:flex items-center space-x-1">
-              <a href="#" class="py-4 px-2 text-green-500 font-semibold border-green-500 border-b-4">ទំព័រដើម</a>
-              <a href="#" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">សេវាកម្ម</a>
-              <a href="#" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">អំពីយើង</a>
-              <a href="#" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">ទំនាក់ទំនង</a>
+              <a href="#" class="py-4 px-2 text-green-500 font-semibold border-green-500 border-b-4">Home</a>
+              <a href="#" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Services</a>
+              <a href="#" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">About</a>
+              <a href="#" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Contact</a>
+              <a href="./admin.html" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Admin</a>
+              <a href="./apple.html" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Apple</a>
             </div>
           </div>
         </div>
