--- a/src/admin.html
+++ b/src/admin.html
@@ -41,7 +41,7 @@
           <div class="ml-3 text-sm">Messages</div>
         </div>
         <div class="flex items-center m-5 mt-2 text-gray-100">
-          <div><i class="fa fa-google-wallet text-xl"></i></div>
+          <div><i class="fa fa-wallet text-xl"></i></div>
           <div class="ml-3 text-sm">Apps</div>
         </div>
         <div class="flex items-center m-5 mt-2 text-gray-100">
@@ -71,7 +71,7 @@
                 <i class="fa fa-search" aria-hidden="true"></i>
               </div>
               <div class="bg-gray-200 text-xl h-8 w-8 rounded-full flex justify-center items-center">
-                <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
+                <i class="fa fa-envelope-open" aria-hidden="true"></i>
               </div>
               <div class="bg-gray-200 text-xl h-8 w-8 rounded-full flex justify-center items-center">
                 <i class="fa fa-warning" aria-hidden="true"></i>
@@ -164,7 +164,7 @@
                   <div class="flex">
                     <div class="w-1/3">
                       <div class="flex items-center">
-                        <i class="fa fa-youtube text-4xl text-red-600" aria-hidden="true"></i>
+                        <i class="fab fa-youtube text-4xl text-red-600" aria-hidden="true"></i>
                         <div class="ml-3">YouTube</div>
                       </div>
                     </div>
@@ -180,7 +180,7 @@
                   <div class="flex">
                     <div class="w-1/3">
                       <div class="flex items-center">
-                        <i class="fa fa-github text-4xl text-gray-600" aria-hidden="true"></i>
+                        <i class="fab fa-github text-4xl text-gray-600" aria-hidden="true"></i>
                         <div class="ml-3">Github</div>
                       </div>
                     </div>
@@ -196,7 +196,7 @@
                   <div class="flex">
                     <div class="w-1/3">
                       <div class="flex items-center">
-                        <i class="fa fa-google text-4xl text-yellow-400" aria-hidden="true"></i>
+                        <i class="fab fa-google text-4xl text-yellow-400" aria-hidden="true"></i>
                         <div class="ml-3">Google</div>
                       </div>
                     </div>
@@ -212,7 +212,7 @@
                   <div class="flex">
                     <div class="w-1/3">
                       <div class="flex items-center">
-                        <i class="fa fa-facebook text-4xl text-blue-600" aria-hidden="true"></i>
+                        <i class="fab fa-facebook text-4xl text-blue-600" aria-hidden="true"></i>
                         <div class="ml-3">Facebook</div>
                       </div>
                     </div>
