--- a/src/apple.html
+++ b/src/apple.html
@@ -12,9 +12,7 @@
   <body>
     <div class="my-container">
       <!-- section 1 -->
-      <section
-        class="section-1 h-screen w-full bg-cyan-400 [clip-path:polygon(100%_0,100%_95%,38%_100%,0_100%,0_0)] flex items-center justify-evenly relative"
-      >
+      <section class="section-1 w-full flex items-center justify-evenly relative">
         <!-- menu -->
         <div class="absolute top-0 left-0 w-full flex items-center px-5 py-2">
           <!-- logo -->
@@ -33,7 +31,7 @@
         </div>
         <!-- menu -->
         <!-- section-1-wrapper -->
-        <div class="section-wrapper flex px-5 items-center justify-evenly w-full">
+        <div class="section-wrapper mt-36 pb-12 flex px-5 items-center justify-evenly w-full">
           <!-- cube-wrapper -->
           <div class="cube-wrapper [perspective:1000px] pl-10">
             <!-- cube -->
@@ -58,7 +56,7 @@
             <!-- cube -->
             <!-- controls -->
             <div
-              class="controls absolute bottom-[-150px] left-1/2 -translate-x-1/2 w-[100px] h-[100px] bg-gray-900/90 rounded-full border-8 border-gray-900/80"
+              class="controls relative mt-10 left-1/2 -translate-x-1/2 w-[100px] h-[100px] bg-gray-900/90 rounded-full border-8 border-gray-900/80"
             >
               <a href="#" class="top-x-control absolute text-gray-200 top-0 left-1/2 -translate-x-1/2"
                 ><i class="fas fa-arrow-up opacity-50 hover:opacity-100 transition-opacity duration-300"></i
@@ -105,6 +103,18 @@
         <!-- slideshow -->
       </section>
       <!-- section 1 -->
+      <!-- section 2 -->
+      <div class="section-2">
+        <!-- section-heading -->
+        <h2>iPhone 12</h2>
+        <!-- section-heading -->
+        <!-- section-2-images -->
+        <div class="phones">
+          <img src="./images/iPhone 12/iphones-1-img.png" alt="iphone-1" />
+        </div>
+        <!-- section-2-images -->
+      </div>
+      <!-- section 2 -->
     </div>
   </body>
 </html>
